# ouroboros-consensus-tools

./: .gitignore  .stylish-haskell.yaml  README.md  cabal.project  flake.nix
.github/workflows/: ci.yml
beacon/: CHANGELOG.md  beacon.cabal
beacon/app/: beacon.hs
nix/: formatting.nix
scripts/ci/: run-cabal-fmt.sh  run-stylish.sh
